--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://baay22.github.io/Why-Buying-from-a-Jewelry-Outlet-Online-is-the-Best-Option/">https://baay22.github.io/Why-Buying-from-a-Jewelry-Outlet-Online-is-the-Best-Option/</a><br>
+                <a target="_bLank" href="https://jewelrydirectoutlet.s3.us-east-005.backblazeb2.com/Why+Buying+from+a+Jewelry+Outlet+Online+is+the+Best+Option/index.html">https://jewelrydirectoutlet.s3.us-east-005.backblazeb2.com/Why+Buying+from+a+Jewelry+Outlet+Online+is+the+Best+Option/index.html</a><br>
+                <a target="_bLank" href="https://why-buying-from-a-jewelry-outlet-git-bc5408-medultimas-projects.vercel.app/">https://why-buying-from-a-jewelry-outlet-git-bc5408-medultimas-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://dashing-froyo-d44fe0.netlify.app/">https://dashing-froyo-d44fe0.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
